--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -75,7 +75,9 @@
     <Compile Include="Assets\1. Scripts\ECS\Authoring\PlatformAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\ClipboardAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Authoring\Scoring\ScoreAuthoring.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Authoring\Scoring\MultiplierDetailsAuthoring.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Authoring\Bakers\CubeSpawnerBaker.cs" />
+    <Compile Include="Assets\1. Scripts\SerializableDictionaryPackage\SerializableDictionary\SerializableEnumDictionary.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\HeightMeasurement\HeightMeasurementAreasManager.cs" />
     <Compile Include="Assets\1. Scripts\Audio\SFXAudioPlayer.cs" />
     <Compile Include="Assets\1. Scripts\Utility\ECS\RaycastHelper.cs" />
@@ -83,18 +85,23 @@
     <Compile Include="Assets\1. Scripts\Gameplay\Enums\MultiplierName.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightReachedComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\ShouldMoveBackTowardsOriginalPositionComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\Tags\ShouldCalculateScoreTag.cs" />
+    <Compile Include="Assets\1. Scripts\SerializableDictionaryPackage\Structs\SerializableKeyValuePair.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\DraggableTag.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Events\DraggingEvents.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DraggingSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\UI\UIFunctionality.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\MoveFallenShapesBackSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\HeightMeasurementAreasManagerComponent.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Systems\ScoreSystem.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Structs\ScoreAreaRaycastData.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldStopSimulatingTag.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\Events\HeightReachedEvent.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\HeightMeasurement\ReadyButton.cs" />
     <Compile Include="Assets\1. Scripts\Gameplay\HeightMeasurement\GraphPositionManager.cs" />
+    <Compile Include="Assets\1. Scripts\SerializableDictionaryPackage\SerializableDictionary\SerializableDictionary.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\EnablePhysicsSystem.cs" />
+    <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\ScoreCalculatedComponent.cs" />
     <Compile Include="Assets\1. Scripts\zOLD\Systems\CubeSpawnerSystem.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\IsDraggedTag.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\HeightMeasurer\Tags\ShouldMeasureHeightComponent.cs" />
