--- a/GMTK_Gamejam/Assembly-CSharp.csproj
+++ b/GMTK_Gamejam/Assembly-CSharp.csproj
@@ -91,7 +91,6 @@
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\Tags\ShouldCalculateScoreTag.cs" />
     <Compile Include="Assets\1. Scripts\SerializableDictionaryPackage\Structs\SerializableKeyValuePair.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Tags\DraggableTag.cs" />
-    <Compile Include="Assets\1. Scripts\Gameplay\Events\DraggingEvents.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\DraggingSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\UI\UIFunctionality.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Systems\MoveFallenShapesBackSystem.cs" />
@@ -113,6 +112,7 @@
     <Compile Include="Assets\1. Scripts\ECS\Systems\DisablePhysicsSystem.cs" />
     <Compile Include="Assets\1. Scripts\General\DebugInfo\UI\DebugTextManager.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\DragNDrop\Aspects\MovingBackAspect.cs" />
+    <Compile Include="Assets\1. Scripts\Gameplay\Events\StartDraggingEvent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\Scoring\ScoringComponent.cs" />
     <Compile Include="Assets\1. Scripts\ECS\Components\PhysicsSimulation\Tags\ShouldStartSimulatingTag.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
